# luminariff

./: .gitignore  DEPLOYMENT.md  GITHUB_GUIDE.md  INSTALL.md  README.md  check-install.ps1  find-and-setup-stellar.ps1
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: deploy-futurenet.yml  rust-ci.yml
luminariff-contract/: .gitignore  Cargo.toml  LICENSE  README.md  demo.ps1  deploy-futurenet-simple.ps1  deploy-futurenet.ps1  deploy-manual.ps1  deployed-contract-info.txt  setup.ps1  test-admin-functions.ps1  test-contract-functions.ps1  test-full-raffle-flow.ps1
luminariff-contract/src/: lib.rs
